--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Pagina web dedicada a los amantes del weed">
-    <meta name="ketwords" content="weed tutoriales videos guias plantas marihuana cogollos flores geneticas autoflorecientes">
+    <meta name="keywords" content="weed tutoriales videos guias plantas marihuana cogollos flores geneticas autoflorecientes">
     <title>Weed Expertos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
